--- a/news/templates/navbar.html
+++ b/news/templates/navbar.html
@@ -14,6 +14,21 @@
                 <a href="{% url 'newsToday' %}" class="navbar-brand">The Moringa Tribune</a>
 
             </div>
+            <!-- adding a serch form -->
+            <div class="col-sm-4 col-md-4 navbar-right">
+
+                <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+        
+                  <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search Article" name="article">
+                    <div class="input-group-btn">
+                      <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                  </div>
+        
+                </form>
+              </div>
+              <!-- serch ends -->
 
         </div>
 
