--- a/news/templates/all-news/today-news.html
+++ b/news/templates/all-news/today-news.html
@@ -1,5 +1,18 @@
-{%extends 'all-news/base.html'%}
-{% block content %} 
+{% for news_item in news %}
+
+<div class="row">
+  <!-- displaying News articles -->
+  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+    <h2 class="text-center"> {{ news_item.title }} </h2>
+  </div>
+
+  <!--Display news Article images  -->
+  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+    <img src="{{news_item.article_image.url}}" class="img-responsive" alt="Image">
+  </div>
+
+</div>{%extends 'all-news/base.html'%}
+{% block content %}
 {{ block.super}}
 
 <div class="container">
@@ -20,6 +33,20 @@
     <h2 class="text-center">There No News Items</h2>
   </div>
   {% endfor %}
+  {% for news_item in news %}
+
+  <div class="row">
+    <!-- displaying News articles -->
+    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+      <h2 class="text-center"> {{ news_item.title }} </h2>
+    </div>
+
+    <!--Display news Article images  -->
+    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+      <img src="{{news_item.article_image.url}}" class="img-responsive" alt="Image">
+    </div>
+
+  </div>
 
 </div>
 
